# gltf-opengl-poc

./: README.md  main.cc  meson.build  shader.frag
include/: tiny_gltf.h
